lehrbogen: fixed unclear instructions as per testlauf 1

--- a/src/app/documents/lehrbogen.html
+++ b/src/app/documents/lehrbogen.html
@@ -42,8 +42,8 @@
     Installation:
   </p>
   <ol>
-    <li>Erstelle in deinem Homeverzeichnis einen neuen Ordner, z. B. <cb-code>H:\Dokumente\Cranberri</cb-code>.</li>
-    <li>Navigiere im Dateiexplorer zu <cb-code>T:\...\CRANBERRI LOCAL</cb-code> (im Tauschordner) und <i>kopiere</i> alle Dateien dort in den neu erstellten Ordner in deinem Homeverzeichnis.</li>
+    <li>Erstelle in deinem Homeverzeichnis einen neuen Ordner und nenne ihn z. B. <cb-code>Cranberri</cb-code> (der Name darf kein Leerzeichen enthalten, und sollte nur aus Buchstaben bestehen!).</li>
+    <li>Navigiere im Dateiexplorer zu <cb-code>T:\...\CRANBERRI LOCAL</cb-code> im Tauschordner (<div class="cb-warn">!</div> Achtung! Nicht <cb-code>T:\...\CRANBERRI</cb-code>!) und <i>kopiere</i> alle Dateien dort in den neu erstellten Ordner in deinem Homeverzeichnis.</li>
   </ol>
   <p>
     Cranberri starten, Projekt erstellen und in VS Code öffnen:
